Added model for "gangli-della-base"

--- a/ar.html
+++ b/ar.html
@@ -21,7 +21,8 @@
         <a-asset-item id="lobo-parietale-asset" src="models/lobo-parietale.gltf"></a-asset-item>
         <a-asset-item id="polo-frontale-asset" src="models/polo-frontale.gltf"></a-asset-item>
         <a-asset-item id="polo-occipitale-asset" src="models/polo-occipitale.gltf"></a-asset-item>
-        <a-asset-item id="polo-temporale-asset" src="models/polo-temporale.gltf"></a-asset-item>
+        <a-asset-item id="polo-temporale-asset" src="models/polo-temporale.gltf"></a-asset-item>  
+        <a-asset-item id="gangli-della-base-asset" src="models/gangli-della-base.gltf"></a-asset-item>
     </a-assets>
 
     <a-marker type="barcode" value="0">
@@ -54,6 +55,10 @@
 
     <a-marker type="barcode" value="7">
         <a-entity id="polo-temporale-model" gltf-model="#polo-temporale-asset" scale="0.025 0.025 0.025"></a-entity>
+    </a-marker>
+
+    <a-marker type="barcode" value="8">
+        <a-entity id="gangli-della-base-model" gltf-model="#gangli-della-base-asset" scale="0.025 0.025 0.025"></a-entity>
     </a-marker>
 
     <a-entity camera></a-entity>
