--- a/psy/stroop.html
+++ b/psy/stroop.html
@@ -15,7 +15,7 @@ canvasbox.addEventListener(iswebkit?'webkitfullscreenchange':'fullscreenchange',
 <center><div id="cbox" style="overflow:hidden;width:800px;height:600px;border:0px
     solid black;background-color:black;display:flex;justify-content:center;align-items:center"><canvas tabindex="1" id="exp" style="display:flex;justify-content:center;align-items:center;outline:none;display:
     block;background-color:black;border:none;padding:0;margin:0;" width="800" height="600"></canvas></div>
-<div style="display:flex;justify-content:left;width:800px;background-color:black;border:0px solid black;"><button type="button" style="background-color:black;color:white;border:none;padding:0;font-size:100%;font-family:inherit" title="fullscreen" onclick='psy_fullscreen(document.getElementById("cbox"));psy_screen_scale(0,true);'>&nbsp;⛶</button></div></center>
+<div style="display:flex;justify-content:left;width:800px;background-color:black;border:0px solid black;"><button type="button" style="background-color:black;color:white;border:none;padding:0;font-size:100%;font-family:inherit" title="fullscreen" onclick='psy_fullscreen(document.getElementById("cbox"));psy_screen_scale(0,true);'>&nbsp;X</button></div></center>
 <script>
  var click_to_start_text = "Click to start";
 
