--- a/psy/stroop.html
+++ b/psy/stroop.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="UTF-8"><title>PsyToolkit run experiment</title>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="UTF-8"><title>PsyToolkit STROOP Test</title>
 </head>
 <body onload="whenloaded()">
 <script>
