--- a/psy/stroop.html
+++ b/psy/stroop.html
@@ -17,7 +17,7 @@ canvasbox.addEventListener(iswebkit?'webkitfullscreenchange':'fullscreenchange',
     block;background-color:black;border:none;padding:0;margin:0;" width="800" height="600"></canvas></div>
 <div style="display:flex;justify-content:left;width:800px;background-color:black;border:0px solid black;"><button type="button" style="background-color:black;color:white;border:none;padding:0;font-size:100%;font-family:inherit" title="fullscreen" onclick='psy_fullscreen(document.getElementById("cbox"));psy_screen_scale(0,true);'>&nbsp;X</button></div></center>
 <script>
- var click_to_start_text = "Click to start";
+ var click_to_start_text = "Click per cominciare";
 
  tmp1 = document.getElementById('exp');
  tmp2 = tmp1.getContext('2d');
