--- a/ar.html
+++ b/ar.html
@@ -23,6 +23,7 @@
         <a-asset-item id="polo-occipitale-asset" src="models/polo-occipitale.gltf"></a-asset-item>
         <a-asset-item id="polo-temporale-asset" src="models/polo-temporale.gltf"></a-asset-item>  
         <a-asset-item id="gangli-della-base-asset" src="models/gangli-della-base.gltf"></a-asset-item>
+         <a-asset-item id="area-di-broca_area-di-wernicke" src="area-di-broca_area-di-wernicke.gltf"></a-asset-item>  
     </a-assets>
 
     <a-marker type="barcode" value="0">
@@ -59,6 +60,10 @@
 
     <a-marker type="barcode" value="8">
         <a-entity id="gangli-della-base-model" gltf-model="#gangli-della-base-asset" scale="0.025 0.025 0.025"></a-entity>
+    </a-marker>
+    
+    <a-marker type="barcode" value="9">
+        <a-entity id="area-di-broca_area-di-wernicke" gltf-model="#area-di-broca_area-di-wernicke" scale="0.025 0.025 0.025"></a-entity>
     </a-marker>
 
     <a-entity camera></a-entity>
