--- a/ar.html
+++ b/ar.html
@@ -24,6 +24,7 @@
         <a-asset-item id="polo-temporale-asset" src="models/polo-temporale.gltf"></a-asset-item>  
         <a-asset-item id="gangli-della-base-asset" src="models/gangli-della-base.gltf"></a-asset-item>
         <a-asset-item id="area-di-broca_area-di-wernicke" src="models/area-di-broca_area-di-wernicke.gltf"></a-asset-item>  
+        <a-asset-item id="polo-frontale_polo-temporale" src="models/polo-frontale_polo-temporale.gltf"></a-asset-item>
     </a-assets>
 
     <a-marker type="barcode" value="0">
@@ -64,6 +65,10 @@
     
     <a-marker type="barcode" value="9">
         <a-entity id="area-di-broca_area-di-wernicke" gltf-model="#area-di-broca_area-di-wernicke" scale="0.025 0.025 0.025"></a-entity>
+    </a-marker>
+    
+    <a-marker type="barcode" value="10">
+        <a-entity id="polo-frontale_polo-temporale" gltf-model="#polo-frontale_polo-temporale" scale="0.025 0.025 0.025"></a-entity>
     </a-marker>
 
     <a-entity camera></a-entity>
