added Corteccia motoria
addition

--- a/ar.html
+++ b/ar.html
@@ -25,6 +25,7 @@
         <a-asset-item id="gangli-della-base-asset" src="models/gangli-della-base.gltf"></a-asset-item>
         <a-asset-item id="area-di-broca_area-di-wernicke" src="models/area-di-broca_area-di-wernicke.gltf"></a-asset-item>  
         <a-asset-item id="polo-frontale_polo-temporale" src="models/polo-frontale_polo-temporale.gltf"></a-asset-item>
+        <a-asset-item id="corteccia-motoria" src="models/corteccia-motoria.gltf"></a-asset-item>
     </a-assets>
 
     <a-marker type="barcode" value="0">
@@ -69,6 +70,10 @@
     
     <a-marker type="barcode" value="10">
         <a-entity id="polo-frontale_polo-temporale" gltf-model="#polo-frontale_polo-temporale" scale="0.025 0.025 0.025"></a-entity>
+    </a-marker>
+    
+    <a-marker type="barcode" value="11">
+        <a-entity id="corteccia-motoria" gltf-model="#corteccia-motoria" scale="0.025 0.025 0.025"></a-entity>
     </a-marker>
 
     <a-entity camera></a-entity>
