--- a/ar.html
+++ b/ar.html
@@ -26,6 +26,7 @@
         <a-asset-item id="area-di-broca_area-di-wernicke" src="models/area-di-broca_area-di-wernicke.gltf"></a-asset-item>  
         <a-asset-item id="polo-frontale_polo-temporale" src="models/polo-frontale_polo-temporale.gltf"></a-asset-item>
         <a-asset-item id="corteccia-motoria" src="models/corteccia-motoria.gltf"></a-asset-item>
+        <a-asset-item id="corteccia-motoria_gangli-della-base_lobo-parietale_polo-frontale" src="models/corteccia-motoria_gangli-della-base_lobo-parietale_polo-frontale.gltf"></a-asset-item>
     </a-assets>
 
     <a-marker type="barcode" value="0">
@@ -76,6 +77,12 @@
         <a-entity id="corteccia-motoria" gltf-model="#corteccia-motoria" scale="0.025 0.025 0.025"></a-entity>
     </a-marker>
 
+    <a-marker type="barcode" value="12">
+        <a-entity id="corteccia-motoria_gangli-della-base_lobo-parietale_polo-frontale" gltf-model="#corteccia-motoria_gangli-della-base_lobo-parietale_polo-frontale
+" scale="0.025 0.025 0.025"></a-entity>
+    </a-marker>
+    
+     
     <a-entity camera></a-entity>
 </a-scene>
 </body>
