--- a/ar.html
+++ b/ar.html
@@ -78,8 +78,7 @@
     </a-marker>
 
     <a-marker type="barcode" value="12">
-        <a-entity id="corteccia-motoria_gangli-della-base_lobo-parietale_polo-frontale" gltf-model="#corteccia-motoria_gangli-della-base_lobo-parietale_polo-frontale
-" scale="0.025 0.025 0.025"></a-entity>
+        <a-entity id="corteccia-motoria_gangli-della-base_lobo-parietale_polo-frontale" gltf-model="#corteccia-motoria_gangli-della-base_lobo-parietale_polo-frontale" scale="0.025 0.025 0.025"></a-entity>
     </a-marker>
     
      
