--- a/ar.html
+++ b/ar.html
@@ -8,6 +8,7 @@
     <script src="libs/aframe-master.min.js"></script>
     <script src="libs/aframe-ar.js"></script>
     <script src="libs/hammer.min.js"></script>
+    <script src="libs/hammer_runtime.js"></script>
 </head>
 <body>
 <a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'
