--- a/ar.html
+++ b/ar.html
@@ -9,6 +9,11 @@
     <script src="libs/aframe-ar.js"></script>
 <!--    <script src="libs/hammer.min.js"></script>
     <script src="libs/hammer_runtime.js"></script> -->
+    <!-- We've included a slightly modified version of A-Frame, which fixes some polish concerns -->
+    <script src="libs/8frame-1.3.0.min.js"></script>
+    <!-- XR Extras - provides utilities like load screen, almost there, and error handling.
+         See github.com/8thwall/web/tree/master/xrextras -->
+    <script src="libs/xrextras.js"></script>
 </head>
 <body>
 <a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'
