--- a/ar.html
+++ b/ar.html
@@ -14,6 +14,7 @@
     <!-- XR Extras - provides utilities like load screen, almost there, and error handling.
          See github.com/8thwall/web/tree/master/xrextras -->
     <script src="libs/xrextras.js"></script>
+    <script src='libs/landing-page.js'></script>
 </head>
 <body>
 <a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'
