--- a/ar.html
+++ b/ar.html
@@ -19,12 +19,8 @@
 <body>
 <a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'
          renderer='precision: medium;'
-         id="scene"
-         xrextras-gesture-detector
-         landing-page
-         xrextras-loading
-         xrextras-runtime-error
-         xrweb="allowedDevices: any">
+         xrweb="allowedDevices: any"
+         id="scene">
 
     <a-assets id="assets">
         <a-asset-item id="amigdala-asset" src="models/amigdala.gltf"></a-asset-item>
