--- a/ar.html
+++ b/ar.html
@@ -8,20 +8,13 @@
     <script src="libs/aframe-master.min.js"></script>
     <script src="libs/aframe-ar.js"></script>
 <!--    <script src="libs/hammer.min.js"></script>
-    <script src="libs/hammer_runtime.js"></script> -->
-    <!-- We've included a slightly modified version of A-Frame, which fixes some polish concerns -->
+    <script src="libs/hammer_runtime.js"></script> 
     <script src="libs/8frame-1.3.0.min.js"></script>
-    <!-- XR Extras - provides utilities like load screen, almost there, and error handling.
-         See github.com/8thwall/web/tree/master/xrextras -->
     <script src="libs/xrextras.js"></script>
-    <script src='libs/landing-page.js'></script>
+    <script src='libs/landing-page.js'></script> -->
 </head>
 <body>
-<a-scene 
-         xrextras-gesture-detector
-         xrextras-loading
-         xrextras-runtime-error
-         embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'
+<a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'
          renderer='precision: medium;'
          id="scene">
 
