--- a/ar.html
+++ b/ar.html
@@ -14,7 +14,8 @@
     <script src='libs/landing-page.js'></script> -->
 </head>
 <body>
-<a-scene embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'
+<a-scene gesture-detector    
+         embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'
          renderer='precision: medium;'
          id="scene">
 
