--- a/ar.html
+++ b/ar.html
@@ -36,7 +36,8 @@
     </a-assets>
 
     <a-marker type="barcode" value="0">
-        <a-entity id="amigdala-model" gltf-model="#amigdala-asset" rotation="-90 180 180" scale="0.025 0.025 0.025"></a-entity>
+        <a-entity id="amigdala-model" gltf-model="#amigdala-asset" rotation="-90 180 180" scale="0.025 0.025 0.025" class="clickable"
+      gesture-handler="minScale: 0.25; maxScale: 10"></a-entity>
     </a-marker>
 
     <a-marker type="barcode" value="1">
