--- a/ar.html
+++ b/ar.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="style.css" />
 
     <script src="libs/aframe-master.min.js"></script>
-    <script src="libs/aframe-ar.js"></script>
-<!--    <script src="libs/hammer.min.js"></script>
-    <script src="libs/hammer_runtime.js"></script> 
-    <script src="libs/8frame-1.3.0.min.js"></script>
+    <script src="libs/AR.js"></script>
+    <script src="libs/rotate.js"></script>
+    <script src="libs/scale.js"></script> 
+<!--     <script src="libs/8frame-1.3.0.min.js"></script>
     <script src="libs/xrextras.js"></script>
     <script src='libs/landing-page.js'></script> -->
 </head>
