--- a/ar.html
+++ b/ar.html
@@ -9,8 +9,8 @@
     <script src="libs/AR.js"></script>
     <script src="libs/rotate.js"></script>
     <script src="libs/scale.js"></script> 
+    <script src="libs/gesture-detector.js"></script>
 <!--     <script src="libs/8frame-1.3.0.min.js"></script>
-    <script src="libs/xrextras.js"></script>
     <script src='libs/landing-page.js'></script> -->
 </head>
 <body>
