--- a/ar.html
+++ b/ar.html
@@ -17,7 +17,7 @@
 <a-scene gesture-detector    
          embedded arjs='sourceType: webcam; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'
          renderer='precision: medium;'
-         vr-mode-ui="enabled: false"
+   <!--        vr-mode-ui="enabled: false"  -->
          id="scene">
 
     <a-assets id="assets">
