--- a/ar.html
+++ b/ar.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="style.css" />
 
     <script src="libs/aframe-master.min.js"></script>
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="libs/aframe-ar.js"></script>
+    <script src="libs/AR.js"></script>
     <script src="gesture-detector.js"></script>
     <script src="gesture-handler.js"></script>
 
