--- a/ar.html
+++ b/ar.html
@@ -8,8 +8,8 @@
     <script src="libs/aframe-master.min.js"></script>
     <script src="libs/aframe-ar.js"></script>
     <script src="libs/AR.js"></script>
-    <script src="gesture-detector.js"></script>
-    <script src="gesture-handler.js"></script>
+    <script src="libs/gesture-detector.js"></script>
+    <script src="libs/gesture-handler.js"></script>
 
 <!--     <script src="libs/AR.js"></script>
     <script src="libs/rotate.js"></script>
