--- a/ar.html
+++ b/ar.html
@@ -44,7 +44,7 @@
         raycaster="objects: .clickable"
         emitevents="true"
         cursor="fuse: false; rayOrigin: mouse;"
-        id="markerA"
+        id="amigdala-model"
         type="barcode" value="0"
        >
         <a-entity id="amigdala-model" gltf-model="#amigdala-asset" rotation="-90 180 180" scale="0.025 0.025 0.025" class="clickable"
