--- a/ar.html
+++ b/ar.html
@@ -20,7 +20,7 @@
 
     <a-assets id="assets">
         <a-asset-item id="amigdala-asset" src="models/amigdala.gltf"></a-asset-item>
-        <a-asset-item id="area-di-broca-asset" src="models/area-di-broca.gltf"></a-asset-item>
+  <!--      <a-asset-item id="area-di-broca-asset" src="models/area-di-broca.gltf"></a-asset-item>
         <a-asset-item id="area-di-wernicke-asset" src="models/area-di-wernicke.gltf"></a-asset-item>
         <a-asset-item id="ippocampo-asset" src="models/ippocampo.gltf"></a-asset-item>
         <a-asset-item id="lobo-parietale-asset" src="models/lobo-parietale.gltf"></a-asset-item>
@@ -31,7 +31,7 @@
         <a-asset-item id="area-di-broca_area-di-wernicke" src="models/area-di-broca_area-di-wernicke.gltf"></a-asset-item>  
         <a-asset-item id="polo-frontale_polo-temporale" src="models/polo-frontale_polo-temporale.gltf"></a-asset-item>
         <a-asset-item id="corteccia-motoria" src="models/corteccia-motoria.gltf"></a-asset-item>
-        <a-asset-item id="corteccia-motoria_gangli-della-base_lobo-parietale_polo-frontale" src="models/corteccia-motoria_gangli-della-base_lobo-parietale_polo-frontale.gltf"></a-asset-item>
+        <a-asset-item id="corteccia-motoria_gangli-della-base_lobo-parietale_polo-frontale" src="models/corteccia-motoria_gangli-della-base_lobo-parietale_polo-frontale.gltf"></a-asset-item> -->
     </a-assets>
 
     <a-marker
