--- a/ar.html
+++ b/ar.html
@@ -20,8 +20,8 @@
 
     <a-assets id="assets">
         <a-asset-item id="amigdala-asset" src="models/amigdala.gltf"></a-asset-item>
-  <!--      <a-asset-item id="area-di-broca-asset" src="models/area-di-broca.gltf"></a-asset-item>
-        <a-asset-item id="area-di-wernicke-asset" src="models/area-di-wernicke.gltf"></a-asset-item>
+        <a-asset-item id="area-di-broca-asset" src="models/area-di-broca.gltf"></a-asset-item>
+     <!--    <a-asset-item id="area-di-wernicke-asset" src="models/area-di-wernicke.gltf"></a-asset-item>
         <a-asset-item id="ippocampo-asset" src="models/ippocampo.gltf"></a-asset-item>
         <a-asset-item id="lobo-parietale-asset" src="models/lobo-parietale.gltf"></a-asset-item>
         <a-asset-item id="polo-frontale-asset" src="models/polo-frontale.gltf"></a-asset-item>
@@ -45,7 +45,7 @@
       gesture-handler="minScale: 0.25; maxScale: 10"></a-entity>
     </a-marker>
     
-    <!--    
+      
    
     <a-marker
         raycaster="objects: .clickable"
@@ -58,7 +58,7 @@
       gesture-handler="minScale: 0.25; maxScale: 10"></a-entity>
     </a-marker>
 
-
+ <!-- 
     <a-marker
         raycaster="objects: .clickable"
         emitevents="true"
