--- a/ar4.html
+++ b/ar4.html
@@ -33,8 +33,8 @@
         >
    <a-entity id="corteccia-motoria_gangli-della-base_lobo-parietale_polo-frontale" gltf-model="#corteccia-motoria_gangli-della-base_lobo-parietale_polo-frontale" rotation="-90 180 180" scale="0.025 0.025 0.025" class="clickable"
       gesture-handler="minScale: 0.25; maxScale: 10"></a-entity> 
-  <!--      <a-entity id="corteccia-motoria_gangli-della-base_lobo-parietale_polo-frontale" gltf-model="#corteccia-motoria_gangli-della-base_lobo-parietale_polo-frontale" rotation="-90 180 180" scale="0.025 0.025 0.025"></a-entity>
-    </a-marker>    -->
+  <!--      <a-entity id="corteccia-motoria_gangli-della-base_lobo-parietale_polo-frontale" gltf-model="#corteccia-motoria_gangli-della-base_lobo-parietale_polo-frontale" rotation="-90 180 180" scale="0.025 0.025 0.025"></a-entity>  -->
+    </a-marker>   
     
         <a-marker 
         raycaster="objects: .clickable"
@@ -45,8 +45,8 @@
         >
    <a-entity id="corteccia-motoria" gltf-model="#corteccia-motoria" rotation="-90 180 180" scale="0.025 0.025 0.025" class="clickable"
       gesture-handler="minScale: 0.25; maxScale: 10"></a-entity> 
-   <!--   <a-entity id="corteccia-motoria" gltf-model="#corteccia-motoria" rotation="-90 180 180" scale="0.025 0.025 0.025"></a-entity>
-    </a-marker> -->
+   <!--   <a-entity id="corteccia-motoria" gltf-model="#corteccia-motoria" rotation="-90 180 180" scale="0.025 0.025 0.025"></a-entity> -->
+    </a-marker> 
   
     
     <a-entity camera></a-entity>
